--- a/DameDoy/templates/html/compra.html
+++ b/DameDoy/templates/html/compra.html
@@ -30,7 +30,7 @@
                     </p>
                     <p class="precio">${{ item.material.precio }}</p>
                 </div>
-                <button class="btn-eliminar" onclick="eliminarItem({{ item.id }})">
+                <button class="btn-eliminar" onclick="eliminarItem('{{ item.id }}')">
                     <i class="fas fa-times"></i>
                 </button>
             </div>
